syntax = "proto3";

package user;

service UserService {
  rpc GetUserById (UserRequest) returns (UserResponse);
}

message UserRequest {
  int32 id = 1;  // User ID
}

message UserResponse {
  int32 id = 1;
  string firstName = 2;
  string lastName = 3;
  string email = 4;
  string contactNo = 5;
  string profileImage = 6;
  string createdAt = 7;
}